# d2e-stochastic-dynamics

./: .gitattributes  .gitignore  .gitmodules  README.md  ablate-d2d-langevin.sh  ablate-d2d-moons_to_gmm.sh  ablate-d2d-n_steps-fixed_var.sh  ablate-d2d-normal_to_gmm.sh  ablate-d2d-normal_to_moons.sh  ablate-d2e-different-datasets.sh  ablate-d2e-n_steps-learnt_var.sh  ablate-d2e.sh  ablate.sh  check_cfg.py  datasets_2d.py  dsbm-ablate.sh  ebm-sb-kolya.ipynb  ebm.ipynb  ebm.py  ebm_mnist.py  ema.py  exclude.txt  gen_per_class_images.py  gen_sb_images.py  gen_style_gan.py  generate.py  ll-ablate.sh  load_hydra.py  load_sg_model.sh  mean-score-ablate.sh  metrics.py  mnist_cls.py  model.py  notebook.ipynb  proto.ipynb  pyproject.toml  recompute_path_kl.py  requirements.txt  run.sh  run_abl.sh  (+9 more)
assets/: ali-metrics.numbers
buffers/: __init__.py  langevin_buffer.py  simple_buffer.py
configs/: ablate.yaml  ablations-sb.yaml  check_config.yaml  config.yaml  d2d-ablate.yaml  d2d-langevin.yaml  d2e-ablate.yaml  ds-ablate.yaml  e2e.yaml  ebm.yaml  ebm_mnist.yaml  mnist_sb.yaml  outsourced-sb.yaml  outsourced-sb100.yaml  outsourced-sb256.yaml  outsourced-sb50.yaml  outsourced.yaml  sb-d256.yaml  sb-sg.yaml  sb-sg3.yaml  sb-sngan-ablate.yaml  sb-sngan.yaml
data/: __init__.py  base.py  datasets.py  datasets_fn_2d.py  infinite_loader.py  mnist_dataset.py
diffusion/: ddpm.py
ebm/: s_curve_ebm.pt  swiss_roll_ebm.pt  two_circles_ebm.pt  two_moons_ebm.pt
models/: mnist_models.py  model.py  module.py  ref_process.py  simple_models.py  utils.py
notebooks/: dcgan.ipynb  mcmc.ipynb  (+5 more)
(+153 files in other folders)
